[package]
name = "steg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
block-modes = "0.7"
pbkdf2 = "0.8"
rand = "0.8.5"
rpassword = "5.0.1"
sha2 = "0.9.8"
structopt = "0.3.25"
hmac = "0.11.0"
crypto-mac = "0.11.1"
aes-soft = "0.6.4"
block-padding = "0.2.1"
password-hash = "0.2"
hkdf = "0.11"
argon2 = "0.3"
secrecy = "0.6.0"
base64 = "0.13.0"
crypto = "0.3.0"
hex = "0.4.3"
rustyline = "8.0.0"
block-cipher = "0.8.0"
